Fixed width of body so no horizontal scroll

--- a/media/css/base.css
+++ b/media/css/base.css
@@ -2,8 +2,9 @@ body{
     background-color: #C5DEEB;
 }
 
-div#body, div#content{
-    width: 1024px;
+div#content{
+    max-width: 825px;
+    width: 825px;
 }
 
 div#nav{
